%%{init: {"er": {"nodeSpacing": 20, "rankSpacing": 25, "entityPadding": 3, "minEntityWidth": 30}}}%%
erDiagram
    ingredients {
        bigint id PK
        varchar name
        enum unit
        decimal low_stock_threshold
        boolean is_active
        varchar batch_mode
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    ingredient_batches {
        bigint id PK
        bigint ingredient_id FK
        decimal quantity
        date expiry_date
        timestamp received_at
        decimal cost_per_unit
        integer custom_order
    }
    menu_ingredients {
        bigint id PK
        bigint menu_id FK
        bigint ingredient_id FK
        decimal quantity_used
    }
    stock_movements {
        bigint id PK
        bigint ingredient_id FK
        bigint ingredient_batch_id FK
        bigint order_id FK
        bigint order_item_id FK
        bigint stock_adjustment_id FK
        enum movement_type
        varchar source_type
        varchar source_id
        decimal quantity_before
        decimal quantity_change
        decimal quantity_after
        decimal unit_cost
        varchar reference
        text notes
        bigint recorded_by FK
        timestamp created_at
        timestamp updated_at
    }
    stock_adjustments {
        bigint id PK
        bigint ingredient_id FK
        enum adjustment_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        varchar reason
        bigint reported_by FK
        timestamp adjusted_at
        timestamp created_at
        timestamp updated_at
    }
    daily_ingredient_usages {
        bigint id PK
        date usage_date
        bigint ingredient_id FK
        varchar ingredient_name
        varchar unit
        decimal jumlah_digunakan
        timestamp created_at
        timestamp updated_at
    }
    stock_reports {
        bigint id PK
        bigint ingredient_id FK
        bigint reported_by FK
        enum report_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        text reason
        enum status
        bigint reviewed_by FK
        text rejection_note
        timestamp reviewed_at
        timestamp created_at
        timestamp updated_at
    }
    menu_stocks {
        bigint id PK
        bigint menu_id FK
        enum unit
        decimal low_stock_threshold
        boolean is_active
        varchar batch_mode
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    menu_stock_batches {
        bigint id PK
        bigint menu_stock_id FK
        decimal quantity
        date expiry_date
        timestamp received_at
        decimal cost_per_unit
    }
    menu_stock_adjustments {
        bigint id PK
        bigint menu_stock_id FK
        enum adjustment_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        varchar reason
        bigint reported_by FK
        timestamp adjusted_at
        timestamp created_at
        timestamp updated_at
    }
    menu_stock_movements {
        bigint id PK
        bigint menu_stock_id FK
        bigint menu_stock_batch_id FK
        bigint order_id FK
        bigint order_item_id FK
        bigint menu_stock_adjustment_id FK
        enum movement_type
        varchar source_type
        varchar source_id
        decimal quantity_before
        decimal quantity_change
        decimal quantity_after
        decimal unit_cost
        varchar reference
        text notes
        bigint recorded_by FK
        timestamp created_at
        timestamp updated_at
    }
    menus {
        bigint id PK
        bigint category_id FK
        varchar name
        varchar slug
        text description
        decimal price
        decimal cashback
        varchar image
        boolean is_available
        boolean is_student_discount
        decimal student_price
        boolean is_stock_calculated
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    categories {
        bigint id PK
        varchar name
        varchar slug
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }
    orders {
        bigint id PK
        varchar order_code
        bigint table_id FK
        bigint customer_id FK
        bigint cashier_id FK
        enum status
        enum order_type
        varchar payment_method
        boolean is_paid
        decimal total_amount
        text notes
        timestamp created_at
        timestamp updated_at
    }
    order_items {
        bigint id PK
        bigint order_id FK
        bigint menu_id FK
        integer quantity
        decimal unit_price
        decimal subtotal
        timestamp created_at
        timestamp updated_at
    }
    payments {
        bigint id PK
        bigint order_id FK
        enum payment_method
        enum payment_gateway
        varchar transaction_id
        decimal amount
        enum status
        timestamp paid_at
        timestamp created_at
        timestamp updated_at
    }
    users {
        bigint id PK
        varchar name
        varchar email
        varchar password
        enum role
        varchar nim
        varchar phone
        boolean is_student_verified
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    cafe_tables {
        bigint id PK
        integer table_number
        varchar qr_code
        boolean is_available
        timestamp created_at
        timestamp updated_at
    }

    ingredients ||--o{ ingredient_batches : has
    ingredients ||--o{ stock_movements : has
    ingredients ||--o{ stock_adjustments : has
    ingredients ||--o{ daily_ingredient_usages : has
    ingredients ||--o{ stock_reports : has
    ingredients ||--o{ menu_ingredients : ""
    ingredient_batches ||--o{ stock_movements : ""
    ingredient_batches ||--o{ stock_adjustments : ""
    menus ||--o{ menu_ingredients : ""
    menus ||--o| menu_stocks : ""
    menus ||--o{ order_items : ""
    menus }o--|| categories : ""
    menu_stocks ||--o{ menu_stock_batches : ""
    menu_stocks ||--o{ menu_stock_movements : ""
    menu_stocks ||--o{ menu_stock_adjustments : ""
    menu_stock_batches ||--o{ menu_stock_movements : ""
    orders ||--o{ order_items : ""
    orders ||--o{ payments : ""
    orders ||--o{ stock_movements : ""
    orders ||--o{ menu_stock_movements : ""
    orders }o--|| users : ""
    orders }o--o| cafe_tables : ""
    users ||--o{ orders : ""
    users ||--o{ stock_movements : ""
    users ||--o{ stock_adjustments : ""
    users ||--o{ stock_reports : ""
    categories ||--o{ menus : ""
